Update Project to java 23 using it's new features